syntax = "proto3";
package pmx.pipewire.application;

message ListApplication {
  uint32 object_serial = 1;
  uint32 module_id = 2;
  string pipewire_protocol = 3;
  string pipewire_sec_pid = 4;
  string pipewire_sec_uid = 5;
  string pipewire_sec_gid = 6;
  string pipewire_sec_socket = 7;
  string pipewire_access = 8;
  string name = 9;
}
